# CRCrypt

./: .gitignore  README.md  pyproject.toml
docs/: PLAN.md  TODO.md
src/: cli.py  gui.py  logging.py
src/core/: __init__.py  cipher.py  code.py  cube.py  steps.py
tests/: test_cube.py  test_decrypt.py  test_encrypt.py  test_steps.py
