[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CRCrypt"
dynamic = ["version"]
description = "Clarke's Rubiks Cryptographic Cipher. Uses a virtual rubiks cube as a cipher."
authors = [
    {name = "James David Clarke", email = "james@jamesdavidclarke.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy",
    "python-dotenv",
    "coloredlogs",
    "appdirs",
    "pygame",
    "customtkinter"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/JamesClarke7283/CRCrypt"
"Bug Tracker" = "https://github.com/JamesClarke7283/CRCrypt/issues"

[tool.setuptools]
packages = ["src"]

[project.scripts]
crcrypt = "src.cli:main"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true